--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div id="result" class="functions"></div>
       <p id = "text"></p>
       <button id="saveButton">Save coordinates</button>
+      <button id="loadButton">Load random coordinates</button>
 
       <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
       <script type="text/javascript" src = "cordova-1.7.0.js"></script>
@@ -57,19 +58,15 @@
           //gah.innerHTML = "Latitude: " + lat + "<br>Longitude: " + lon;
           $("#text").html("<p>Latitude: " + lat + "<br>Longitude: " + lon + "</p>")
           $("#saveButton").bind("click", function(event, ui) { 
-             // var str = $("#text").val()
              alert("saving " + lat + " and " + lon)
              var url = "http://intense-harbor-6396.herokuapp.com/location"
              var newCoords = { "lat" : lat, "lon" : lon };
 
-            $.post(url,newCoords, function(data) {
-                  alert("Added coordinates " + data.lat + " " + data.lon);
-                }, 'json');
+             $.post(url,newCoords, function(data) {
+              alert("Added coordinates " + data.lat + " " + data.lon);
+            }, 'json');
            });
         }
-
-        // var button = '<input type="button" id = "saveButton" value = "Save Coordinates">';
-        // $("ui-content").append(button)
 
         function showError(error) {
           switch(error.code) {
@@ -88,7 +85,18 @@
           }
         }
       });
-    
+
+// load some coordinates
+$("#loadButton").bind("click", function(event, ui) { 
+    alert("loading some new coordinates")
+    var url = "http://intense-harbor-6396.herokuapp.com/location/random"
+    var newCoords = { "lat" : lat, "lon" : lon };
+
+    $.get(url, function(data) {
+      alert("Added coordinates " + data.lat + " " + data.lon);
+    }, 'json');
+  });
+
 
 </script>
 </div>
