--- a/index.html
+++ b/index.html
@@ -68,6 +68,36 @@
            });
         }
 
+        function showNewPosition(position, lat, lon) {
+          lat=lat;
+          lon=lon;
+          latlon=new google.maps.LatLng(lat, lon)
+          mapholder=document.getElementById('result')
+          mapholder.style.height='250px';
+          mapholder.style.width='250px';
+
+          var myOptions={
+            center:latlon,zoom:14,
+            mapTypeId:google.maps.MapTypeId.ROADMAP,
+            mapTypeControl:false,
+            navigationControlOptions:{style:google.maps.NavigationControlStyle.SMALL}
+          };
+          var map=new google.maps.Map(document.getElementById("result"),myOptions);
+          var marker=new google.maps.Marker({position:latlon,map:map,title:"You are here!"});
+
+          //gah.innerHTML = "Latitude: " + lat + "<br>Longitude: " + lon;
+          $("#text").html("<p>Latitude: " + lat + "<br>Longitude: " + lon + "</p>")
+          $("#saveButton").bind("click", function(event, ui) { 
+             alert("saving " + lat + " and " + lon)
+             var url = "http://intense-harbor-6396.herokuapp.com/location";
+             var newCoords = { "lat" : lat, "lon" : lon };
+
+             $.post(url,newCoords, function(data) {
+              alert("Added coordinates " + data.lat + " " + data.lon);
+            }, 'json');
+           });
+        }
+
         function showError(error) {
           switch(error.code) {
             case error.PERMISSION_DENIED:
@@ -89,11 +119,12 @@
 // load some coordinates
 $("#loadButton").bind("click", function(event, ui) { 
     alert("loading some new coordinates")
-    var url = "http://intense-harbor-6396.herokuapp.com/location/random"
-    var newCoords = { "lat" : lat, "lon" : lon };
+    var url = "http://intense-harbor-6396.herokuapp.com/location/random";
 
     $.get(url, function(data) {
-      alert("Added coordinates " + data.lat + " " + data.lon);
+    // var newCoords = { "lat" : data.lat, "lon" : data.lon };
+      alert("got coordinates " + data.lat + " " + data.lon);
+    showNewPosition(position, data.lat, data.lon)
     }, 'json');
   });
 
