--- a/index.html
+++ b/index.html
@@ -111,13 +111,28 @@ $("#loadButton").bind("click", function(event, ui) {
 
     $.get(url, function(data) {
       alert("got coordinates " + data.lat + " " + data.lon);
-    showNewPosition(data.lat, data.lon)
     }, 'json');
+    showNewPosition(data.lat, data.lon)
   });
 
 
 </script>
 </div>
+
+<form id="file_upload_form" method="post" enctype="multipart/form-data" action="upload.php">
+<input name="file" id="file" size="27" type="file" /><br />
+<input type="submit" name="action" value="Upload" /><br />
+<iframe id="upload_target" name="upload_target" src="" style="width:0;height:0;border:0px solid #fff;"></iframe>
+</form>
+
+<script type="text/javascript">
+function init() {
+  document.getElementById('file_upload_form').onsubmit=function() {
+    document.getElementById('file_upload_form').target = 'upload_target'; //'upload_target' is the name of the iframe
+  }
+}
+window.onload=init;
+</script>
 
 </body>
 </html>
