--- a/index.html
+++ b/index.html
@@ -1,136 +1,122 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css"/>
-  <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.js"></script>
+  <title>Take or select photo(s) and upload</title>
+  <script type="text/javascript">
+  function fileSelected() {
+
+    var count = document.getElementById('fileToUpload').files.length;
+
+    document.getElementById('details').innerHTML = "";
+
+    for (var index = 0; index < count; index++)
+
+    {
+
+      var file = document.getElementById('fileToUpload').files[index];
+
+      var fileSize = 0;
+
+      if (file.size > 1024 * 1024)
+
+        fileSize = (Math.round(file.size * 100 / (1024 * 1024)) / 100).toString() + 'MB';
+
+      else fileSize = (Math.round(file.size * 100 / 1024) / 100).toString() + 'KB';
+
+      document.getElementById('details').innerHTML += 'Name: ' + file.name + '<br>Size: ' + fileSize + '<br>Type: ' + file.type;
+
+      document.getElementById('details').innerHTML += '<p>';
+
+    }
+
+  }
+
+  function uploadFile() {
+
+    var fd = new FormData();
+
+    var count = document.getElementById('fileToUpload').files.length;
+
+    for (var index = 0; index < count; index++)
+
+    {
+
+      var file = document.getElementById('fileToUpload').files[index];
+
+      fd.append(file.name, file);
+
+    }
+
+    var xhr = new XMLHttpRequest();
+
+    xhr.upload.addEventListener("progress", uploadProgress, false);
+
+    xhr.addEventListener("load", uploadComplete, false);
+
+    xhr.addEventListener("error", uploadFailed, false);
+
+    xhr.addEventListener("abort", uploadCanceled, false);
+
+    xhr.open("POST", "savetofile.aspx");
+
+    xhr.send(fd);
+
+  }
+
+  function uploadProgress(evt) {
+
+    if (evt.lengthComputable) {
+
+      var percentComplete = Math.round(evt.loaded * 100 / evt.total);
+
+      document.getElementById('progress').innerHTML = percentComplete.toString() + '%';
+
+    } else {
+
+      document.getElementById('progress').innerHTML = 'unable to compute';
+
+    }
+
+  }
+
+  function uploadComplete(evt) {
+
+    /* This event is raised when the server send back a response */
+
+    alert(evt.target.responseText);
+
+  }
+
+  function uploadFailed(evt) {
+
+    alert("There was an error attempting to upload the file.");
+
+  }
+
+  function uploadCanceled(evt) {
+
+    alert("The upload has been canceled by the user or the browser dropped the connection.");
+
+  }
+  </script>
 </head>
 
 <body>
-
-  <div data-role="page" id = "first">
-    <div role="main" class="ui-content">
-
-      <p id="demo">Click the button to get your position:</p>
-      <button id="button1">Try It</button>
-
-      <div id="mapholder"></div>
-      <div id="result" class="functions"></div>
-      <p id = "text"></p>
-      <button id="saveButton">Save coordinates</button>
-      <button id="loadButton">Load random coordinates</button>
-
-      <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-      <script type="text/javascript" src = "cordova-1.7.0.js"></script>
-
-      <script type="text/javascript">
-      $("#button1").bind("click", function(event, ui) {
-        var x=document.getElementById("demo");
-        var gah =document.getElementById("text");
-
-        getLocation();
-
-        function getLocation() {
-          if (navigator.geolocation)
-          {
-            navigator.geolocation.getCurrentPosition(showPosition,showError);
-          }
-          else{x.innerHTML="Geolocation is not supported by this browser.";}
-        }
-
-        function showPosition(position) {
-          lat=position.coords.latitude;
-          lon=position.coords.longitude;
-          latlon=new google.maps.LatLng(lat, lon)
-          mapholder=document.getElementById('result')
-          mapholder.style.height='250px';
-          mapholder.style.width='250px';
-
-          var myOptions={
-            center:latlon,zoom:14,
-            mapTypeId:google.maps.MapTypeId.ROADMAP,
-            mapTypeControl:false,
-            navigationControlOptions:{style:google.maps.NavigationControlStyle.SMALL}
-          };
-          var map=new google.maps.Map(document.getElementById("result"),myOptions);
-          var marker=new google.maps.Marker({position:latlon,map:map,title:"You are here!"});
-
-          //gah.innerHTML = "Latitude: " + lat + "<br>Longitude: " + lon;
-          $("#text").html("<p>Latitude: " + lat + "<br>Longitude: " + lon + "</p>")
-          $("#saveButton").bind("click", function(event, ui) { 
-           alert("saving " + lat + " and " + lon)
-           var url = "http://intense-harbor-6396.herokuapp.com/location"
-           var newCoords = { "lat" : lat, "lon" : lon };
-
-           $.post(url,newCoords, function(data) {
-            alert("Added coordinates " + data.lat + " " + data.lon);
-          }, 'json');
-         });
-        }
-
-        function showNewPosition(lat, lon) {
-          lat=lat;
-          lon=lon;
-          latlon=new google.maps.LatLng(lat, lon)
-          mapholder=document.getElementById('result')
-          mapholder.style.height='250px';
-          mapholder.style.width='250px';
-
-          var myOptions={
-            center:latlon,zoom:14,
-            mapTypeId:google.maps.MapTypeId.ROADMAP,
-            mapTypeControl:false,
-            navigationControlOptions:{style:google.maps.NavigationControlStyle.SMALL}
-          };
-          var map=new google.maps.Map(document.getElementById("result"),myOptions);
-
-        }
-
-        function showError(error) {
-          switch(error.code) {
-            case error.PERMISSION_DENIED:
-            x.innerHTML="User denied the request for Geolocation."
-            break;
-            case error.POSITION_UNAVAILABLE:
-            x.innerHTML="Location information is unavailable."
-            break;
-            case error.TIMEOUT:
-            x.innerHTML="The request to get user location timed out."
-            break;
-            case error.UNKNOWN_ERROR:
-            x.innerHTML="An unknown error occurred."
-            break;
-          }
-        }
-      });
-
-// load some coordinates
-$("#loadButton").bind("click", function(event, ui) { 
-  alert("loading some new coordinates")
-  var url = "http://intense-harbor-6396.herokuapp.com/location/random";
-
-  $.get(url, function(data) {
-    alert("got coordinates " + data.lat + " " + data.lon);
-  }, 'json');
-  showNewPosition(data.lat, data.lon)
-});
-
-$("#stats").bind("click", function(event, ui) {
-  alert("Getting you the stats!")
-  var url = "http://intense-harbor-6396.herokuapp.com/get/stats";
-  $.get(url, function(data) {
-    alert("Got stats...")
-    $("#statsText").html(data)
-  })
-})
-
-</script>
-
-<button id="stats">get stats</button>
-<p id = "statsText"></p>
-
-
-</div>
-
+  <form id="form1" enctype="multipart/form-data" method="post" action="/upload">
+    <div>
+      <label for="fileToUpload">Take or select photo(s)</label>
+      <br />
+      <!-- <input type="file" name="fileToUpload" id="fileToUpload" onchange="fileSelected();" accept="image/*" capture="camera" /> -->
+      <input type='file' name='image' id="fileToUpload" onchange="fileSelected()"/>
+    </div>
+    <div id="details"></div>
+    <div>
+      <!-- <input type="button" onclick="uploadFile()" value="Upload" /> -->
+      <input type="submit"/>
+    </div>
+    <div id="progress"></div>
+  </form>
 </body>
+
 </html>
