--- a/old_index.html
+++ b/old_index.html
@@ -83,8 +83,8 @@
 </head>
 
 <body>
-  <form id="form1" enctype="multipart/form-data" method="post" action="/upload">
-  <!-- <form> -->
+  <!-- <form id="form1" enctype="multipart/form-data" method="post" action="/upload"> -->
+  <form>
 
     <div>
       <label for="fileToUpload">Take or select photo(s)</label>
