--- a/photo.html
+++ b/photo.html
@@ -12,7 +12,8 @@
 	<style>
 	#yourimage {
 		width: 25%;	
-		height: 25%;	
+		height: 25%;
+		padding: 10px;
 	}
 	
 	#swatches {
@@ -49,7 +50,6 @@
 	</div> -->
 
 	<!-- <input id="displayImage" type = "submit"/> -->
-	<img></img>
 
 	<script>
 	var desiredWidth;
