--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<title>ColorThief Demo</title>
 
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" charset="utf-8" src="quantize.js"></script>
-	<script type="text/javascript" charset="utf-8" src="color-thief.js"></script>
-	<script type="text/javascript" charset="utf-8" src="jquery.form.js"></script>
+	<!-- // <script type="text/javascript" charset="utf-8" src="quantize.js"></script> -->
+	<!-- // <script type="text/javascript" charset="utf-8" src="color-thief.js"></script> -->
+	<!-- // <script type="text/javascript" charset="utf-8" src="jquery.form.js"></script> -->
 
-	<script type="text/javascript" src="js/lodash.min.js"></script>
-    <script type="text/javascript" src="js/s3upload.js"></script>
+	<!-- // <script type="text/javascript" src="js/lodash.min.js"></script> -->
+    <!-- // <script type="text/javascript" src="js/s3upload.js"></script> -->
 
     <style>
     #yourimage {
-      width: 25%;	
-      height: 25%;	
+      width: 15%;	
+      height: 15%;	
   }
   #swatches {
       width: 100%;
