--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@ $.ajaxSetup ({
 });
 
 $("#getButton").bind("click", function (event, ui) {
-    // var url = "http://intense-harbor-6396.herokuapp.com/url";
-    var url = "http://localhost:3000/url";
+    var url = "http://intense-harbor-6396.herokuapp.com/url";
+    // var url = "http://localhost:3000/url";
     $.get(url, function(data) {
         $("#yourimage").attr("src", data.url); //makes it able to display blob as an image....
     })
 })
 
 $("#sendButton").bind("click", function (event, ui) {
-    // var url = "http://intense-harbor-6396.herokuapp.com/upload";
-    var url = "http://localhost:3000/upload";
+    var url = "http://intense-harbor-6396.herokuapp.com/upload";
+    // var url = "http://localhost:3000/upload";
     var file = document.getElementById('file').files[0];
     var key = "events/" + (new Date).getTime() + '-' + file.name; //uploads to this folder and name
     // uploadFile(key); //call so can upload file to S3
