--- a/index.html
+++ b/index.html
@@ -16,56 +16,62 @@
     /*#yourimage {
       width: 15%;   
       height: 15%;  
-  }*/
-  #swatches {
-      width: 100%;
-      height: 50px; 
-  }
-  .swatch {
-      width:18%;
-      height: 50px;
-      border-style:solid;
-      border-width:thin;    
-      float: left;
-      margin-right: 3px;    
-  }
-  </style>
-</head>
+      }*/
+      #swatches {
+          width: 100%;
+          height: 50px; 
+      }
+      .swatch {
+          width:18%;
+          height: 50px;
+          border-style:solid;
+          border-width:thin;    
+          float: left;
+          margin-right: 3px;    
+      }
+      </style>
+  </head>
 
-<body>
+  <body>
 
     <div role="main" class="ui-content">
-    <form method="post" enctype="multipart/form-data" action="/upload">
-        <input type="file" id = "files" capture="camera" accept="image/*" id="takePictureField" name='image'/>
-        <input type="submit" value="submit"/>
-    </form>
+        <form method="post" enctype="multipart/form-data" action="/upload">
+            <input type="file" id = "files" capture="camera" accept="image/*" id="takePictureField" name='image'/>
+            <input type="submit" value="submit"/>
+        </form>
 
-    <h2>Upload to s3</h2>
-    <form id="form1" enctype="multipart/form-data" method="post">
-        <div class="row">
-            <label for = "IDText">User ID:</label>
-            <input name = "IDText" id = "IDText" type = "text"> <br>
+        <h2>Upload to s3</h2>
+        <form id="form1" enctype="multipart/form-data" method="post">
+            <div class="row">
+                <label for = "IDText">User ID:</label>
+                <input name = "IDText" id = "IDText" type = "text">
 
-            <label for = "ImageNameText">Image name:</label>
-            <input name = "ImageNameText" id = "ImageNameText" type = "text"> <br>
+                <label for = "ImageNameText">Image name:</label>
+                <input name = "ImageNameText" id = "ImageNameText" type = "text">
 
-            <label for = "descText">Description:</label>
-            <input name = "descText" id = "descText" type = "text"> <br>
+                <label for = "descText">Description:</label>
+                <input name = "descText" id = "descText" type = "text"> 
 
-            <label for="file">Select a File to Upload</label><br />
-            <input type="file" name="file" id="file" capture="camera" accept="image/*" />
-        </div>
+                <select name="category">
+                    <option selected disabled>Choose category</option>
+                    <option value="animals">Animals</option>
+                    <option value="plants">Plants</option>
+                    <option value="other">Other</option>
+                </select>
+                <label for="file">Select a File to Upload</label>
+                <input type="file" name="file" id="file" capture="camera" accept="image/*" />
+            </div>
 
-        <div class="row">
-            <!-- <input type="button" onclick="uploadFile()" value="Upload" /> -->
-            <input type="button" value="Upload" id = "sendButton"/>
+            <div class="row">
+                <!-- <input type="button" onclick="uploadFile()" value="Upload" /> -->
+                <input type="button" value="Upload" id = "sendButton"/>
 
-        </div>
-        <div id="progressNumber"></div>
-    <input type="button" value="get image" id = "getButton"/>
-    </form>
+            </div>
+            <div id="progressNumber"></div>
+            <input type="button" value="get image" id = "getButton"/>
+        </form>
 
-    <img id="yourimage"/>
+        <img id="yourimage"/>
 
 <!--    <div id="swatches">
         <div id="swatch0" class="swatch"></div>
@@ -75,13 +81,13 @@
         <div id="swatch4" class="swatch"></div>
     </div> -->
 
-    </div>
+</div>
 
-    <script>
-    var desiredWidth;
-    $(document).ready(function() {
-        console.log('onReady');
-        $("#takePictureField").on("change",gotPic);
+<script>
+var desiredWidth;
+$(document).ready(function() {
+    console.log('onReady');
+    $("#takePictureField").on("change",gotPic);
         // $("#yourimage").load(getSwatches);
         desiredWidth = window.innerWidth;
 
@@ -90,14 +96,14 @@
         }
     });
 
-    function getSwatches(){
-        var colorArr = createPalette($("#yourimage"), 5);
-        for (var i = 0; i < Math.min(5, colorArr.length); i++) {
-            $("#swatch"+i).css("background-color","rgb("+colorArr[i][0]+","+colorArr[i][1]+","+colorArr[i][2]+")");
-            console.log($("#swatch"+i).css("background-color"));
-        }
+function getSwatches(){
+    var colorArr = createPalette($("#yourimage"), 5);
+    for (var i = 0; i < Math.min(5, colorArr.length); i++) {
+        $("#swatch"+i).css("background-color","rgb("+colorArr[i][0]+","+colorArr[i][1]+","+colorArr[i][2]+")");
+        console.log($("#swatch"+i).css("background-color"));
     }
-    
+}
+
     //Credit: https://www.youtube.com/watch?v=EPYnGFEcis4&feature=youtube_gdata_player
     function gotPic(event) {
         if(event.target.files.length == 1 && 
