--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@ $("#form1").validate({
         },
         file: {
             required: true
+        },
+
+        submitHandler: function(form) {
+            return false;
         }
     }
 });
