--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ $("#form1").validate({
         },
 
         submitHandler: function(form) {
-            return false;
+            form.submit();
         }
     }
 });
