--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ $("#form1").validate({
 
 function getLocation() {
     if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition);
+        navigator.geolocation.getCurrentPosition(showPosition, showError);
     } else {
          alert("Geolocation is not supported by this browser.");
     }
@@ -233,6 +233,24 @@ function showPosition(position) {
     var lon = position.coords.longitude;
     var data = lat + "," + lon;
     document.getElementById("locationText").innerHTML = data;
+}
+
+
+function showError(error) {
+    switch(error.code) {
+        case error.PERMISSION_DENIED:
+            alert("User denied the request for Geolocation.");
+            break;
+        case error.POSITION_UNAVAILABLE:
+            alert("Location information is unavailable.");
+            break;
+        case error.TIMEOUT:
+            alert("The request to get user location timed out.");
+            break;
+        case error.UNKNOWN_ERROR:
+            alert("An unknown error occurred.");
+            break;
+    }
 }
 
 /* post form info to server */
